refactor: adapt bolier plate to use eslint config

--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -58,8 +58,8 @@
     }
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint 'src/**' --fix"
+    "*.{js,jsx,ts,tsx}": [
+      "eslint 'src/**/*.{js,jsx,ts,tsx}' --fix"
     ]
   }
 }
