--- a/chat-client/package.json
+++ b/chat-client/package.json
@@ -5,18 +5,9 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
-    "typescript": "^4.0.3",
-    "web-vitals": "^0.2.4"
+    "react-scripts": "4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,6 +34,15 @@
     ]
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/node-sass": "^4.11.1",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/socket.io-client": "^1.4.35",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "eslint": "^7.18.0",
     "eslint-config-standard-with-typescript": "^19.0.1",
@@ -52,7 +52,9 @@
     "eslint-plugin-standard": "^5.0.0",
     "git-commit-msg-linter": "^3.0.0",
     "husky": "^4.3.8",
-    "lint-staged": "^10.5.3"
+    "lint-staged": "^10.5.3",
+    "node-sass": "4.14.1",
+    "typescript": "^4.0.3"
   },
   "husky": {
     "hooks": {
